--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "test:e2e": "playwright test"
   },
   "dependencies": {
@@ -38,14 +40,20 @@
     "@eslint/eslintrc": "3.3.3",
     "@playwright/test": "1.58.2",
     "@tailwindcss/postcss": "4.1.18",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "20.19.33",
     "@types/react": "19.2.14",
     "@types/react-dom": "19.2.3",
+    "@vitejs/plugin-react": "^5.1.4",
     "eslint": "9.39.2",
     "eslint-config-next": "15.5.12",
+    "jsdom": "^28.1.0",
     "shadcn": "3.8.5",
     "tailwindcss": "4.1.18",
     "tw-animate-css": "1.4.0",
-    "typescript": "5.9.3"
+    "typescript": "5.9.3",
+    "vitest": "^4.0.18"
   }
 }
